Update config and fix hint errors

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,8 @@
 {
   "globals": {
-    "angular": false
+    "angular": false,
+    "Firebase": false,
+    "FirebaseAuthClient": false
   },
   "curly": true,
   "eqeqeq": true,
