--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "grunt": "0.4.1",
     "grunt-contrib-clean": "0.4.1",
     "grunt-contrib-copy": "0.4.1",
-    "grunt-contrib-sass": "0.3.0",
     "grunt-contrib-connect": "0.3.0",
     "grunt-contrib-watch": "0.3.1",
     "grunt-karma": "0.4.4",
-    "karma": "0.8.4"
+    "karma": "0.8.4",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-less": "~0.6.1"
   }
 }
